# per_la_liberta

./: .gitignore  1913-italian-ocr-normalization-reference.md  CLAUDE.md  DOC-AUDIT-2.md  DOC-AUDIT-DIFF-REVIEW.md  DOC-AUDIT-DIFF.md  DOC-AUDIT.md  ENGINE_FRAMEWORK_PLAN.md  ENGINE_M3_PLAN.md  ENGINE_M4_PLAN.md  ENGINE_M4b_PLAN.md  ENGINE_M4c_PLAN.md  PIPELINE.md  README.md  REVIEW.md  adjudicate.py  align.py  apply_decisions.py  apply_splits.py  audit_divergences.py  blind_fullbook.py  box_crops.py  build_audit_sheet.py  build_cleanup_sheet.py  build_concordance.py  build_deviation_sheet.py  classify_deviations.py  cleanup.py  companion.py  comprehension.py  confirm_phantoms.py  context_judge.py  crespi-1913-styleguide.html  dictionary-agent_prompts.md  diff_cleanup.py  download.py  edgren.py  fix_corrupted_passage.py  hoare.py  mt.py  (+26 more)
.github/workflows/: engine.yml
archive/: README.md
archive/design/: type-specimen-dropcap.html  type-specimen-pairings.html  (+3 more)
data/: adjudication_results.json  blind_deviations.json  blind_deviations_classified.json  blind_deviations_scanned.json  chapter_pages.json  chapter_start_pages.json  cleanup_corruption_candidates.json  cleanup_worklist_judged.json  cleanup_worklist_scanned.json  companion_citation_map.json  companion_entity_index.json  concordance_audit_results.json  copy1_raw.txt  copy3_flash.txt  copy3_page_map.json  copy3_pro_page_map.json  copy3_raw.txt  corrections.json  dehyphenation_flags.json  divergence_audit_candidates.json  divergence_audit_verdicts.json  divergence_audit_verdicts_gemini.json  ellipsis_english_gaps.json  flagged_segments.json  p2_ch18_sonnet_fix.txt  page_concordance.json  reconciled_chapters.json  reconciled_raw.txt  review_flags.json  review_flags_remaining.json  sample_estimate.json  synthesis_drift_audit.md  typography.json  validation_report.json
docs/: index.html  scan.html
engine/: .gitignore  README.md  pyproject.toml
engine/.github/workflows/: ci.yml
engine/assets/: dictionary  fonts  frequency
engine/books/per_la_liberta/: manifest.json
engine/books/per_la_liberta/inputs/: copy2_raw.txt  italian_clean.md
engine/books/per_la_liberta/probes/: s2_0_geometry_probe.py
engine/books/synthetic/: manifest.json
engine/books/synthetic/inputs/: README.md  clean.md  copy1_raw.txt  copy3_flash_page_map.json  copy3_raw.txt  flagged_segments.json  reconciled_chapters.json  review_flags.json
engine/docs/: ENGINE_STRUCTURE_PLAN.md  ENGINE_STRUCTURE_PLAN_DISCUSSION.md  ENGINE_STRUCTURE_TASKS.md  ENGINE_STRUCTURE_TASKS_DISCUSSION.md  constant_inventory.md  invariants.md  port_discipline.md  s3_0_plan.md  s3_0_plan_discussion.md  s3_1_plan.md
engine/docs/decisions/: branch_register.md  divergence_ledger.md
engine/docs/probes/: s2_0_adversarial_audit.md  s2_0_geometry_alignment.md
engine/docs/structure_corpus/: .gitignore  SOURCES.md
engine/docs/structure_corpus/findings/: README.md  atlantic.md  beeton.md  britannica_1911.md  dante.md  darwin.md  hamlet.md  kybalion.md  pepys.md  pll.md  tractatus.md
engine/profiles/languages/: italian_1900_1922.json
engine/profiles/prompts/: cleanup_correct.txt.j2  ocr.txt.j2  triage.txt.j2
engine/profiles/source_noise/: bodoni_didone.json
engine/profiles/typefaces/: spectral_fraunces.json
engine/src/engine/: __init__.py  cli.py  errors.py  paths.py  providers.py
engine/src/engine/config/: __init__.py  loader.py  models.py
engine/src/engine/config/schema/: language_profile.schema.json  manifest.schema.json  source_noise.schema.json  typeface_profile.schema.json
engine/src/engine/contracts/: __init__.py  markers.py
engine/src/engine/dictionaries/: __init__.py  frequency.py  membership_oracle.py  normalization.py  period_dict.py  symspell.py
engine/src/engine/lang/: __init__.py  base.py  italian.py  registry.py
engine/src/engine/prompts/: __init__.py  templating.py
engine/src/engine/review/: __init__.py  vision_reread.py
engine/src/engine/steps/: __init__.py  adjudicate.py  cleanup.py  download.py  multi_translate.py  ocr.py  reconcile.py  refine.py  translate.py  triage.py  typeset.py  validate.py
engine/src/engine/structure/: __init__.py  artifacts.py  atom_store.py  atoms.py  capture.py  classify.py  lineage.py  roundtrip.py  roundtrip_gate.py  typed.py
engine/src/engine/util/: __init__.py  chapterids.py  jsonio.py  retry.py  text.py
engine/tests/: _idempotency_driver.py  conftest.py
engine/tests/fixtures/: _generate_structure_fixture.py
engine/tests/fixtures/structure/: trivial_structure_map.json
engine/tests/golden/: _generate_chapterids_fixture.py  _generate_cleanup_fixture.py  _generate_reconcile_fixture.py  _generate_validate_fixture.py  test_chapterids_golden.py  test_cleanup_golden.py  test_reconcile_golden.py  test_validate_golden.py
engine/tests/golden/data/: chapterids_expected.json  cleanup_detcore_expected.json  flagged_segments_expected.json  validation_report_expected.json
engine/tests/unit/: test_acquisition_separability.py  test_adjudicate_engine.py  test_assets.py  test_atom_store.py  test_atom_store_real_input.py  test_atomic_writes.py  test_atoms.py  test_block_classifier.py  test_cleanup_engine.py  test_cleanup_neutrality.py  test_config_loader.py  test_core_neutrality.py  test_divergence_ledger.py  test_download_engine.py  test_invariants_controls.py  test_isolation.py  test_markers.py  test_ocr_engine.py  test_raw_capture.py  test_raw_capture_real_input.py  test_reconcile_engine.py  test_resource_lineage.py  test_resource_neutrality.py  test_roundtrip.py  test_roundtrip_gate.py  test_roundtrip_gate_closure.py  test_roundtrip_gate_real_input.py  test_roundtrip_real_input.py  test_sidecar_contracts.py  test_smoke.py  test_structure_artifacts.py  test_structure_neutrality.py  test_structure_tiers.py  test_templating.py  test_triage_engine.py  test_typed_projection.py  test_validate_engine.py  test_workspace.py
output/: bilingual.html  english_translation.md  italian_clean.md  source_pages.json
state/: multi_translate_progress.json  translation_progress.json
static/: bilingual.css
(+852 files in other folders)
