[project]
name = "per-la-liberta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "rapidfuzz>=3.14.3",
    "requests>=2.33.0",
    "sacrebleu>=2.6.0",
    "spacy>=3.8.14",
    "symspellpy>=6.9.0",
]
