[project]
name = "per-la-liberta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "google-genai>=1.69.0",
    "markdown-it-py>=4.0.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "requests>=2.33.0",
    "sacrebleu>=2.6.0",
    "segno>=1.6.6",
    "spacy>=3.8.14",
    "symspellpy>=6.9.0",
    "weasyprint>=68.1",
]

[project.optional-dependencies]
multi-translate = [
    "openai>=1.40.0",
]

