[project]
name = "per-la-liberta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "google-genai>=1.69.0",
    # spaCy Italian model (cleanup NER protection + validate word-quality). Not on
    # PyPI, so pinned by its release wheel URL — declared here so `uv sync` locks it
    # instead of pruning the manually-downloaded copy (it has no other home in uv.lock).
    "it-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/it_core_news_lg-3.8.0/it_core_news_lg-3.8.0-py3-none-any.whl",
    "markdown-it-py>=4.0.0",
    "openai>=2.30.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "requests>=2.33.0",
    "sacrebleu>=2.6.0",
    "segno>=1.6.6",
    "spacy>=3.8.14",
    "symspellpy>=6.9.0",
    "weasyprint>=68.1",
]

[project.optional-dependencies]
multi-translate = [
    "openai>=1.40.0",
]

